# sr-taco

./: .bzrignore  .gitignore  stack.xml
rqt_sr_visual_servoing/: mainpage.dox  manifest.xml  plugin.xml
rqt_sr_visual_servoing/resource/: gui.ui
rqt_sr_visual_servoing/src/rqt_sr_visual_servoing/: gui.py  gui.ui
sr_arm_adapter/: mainpage.dox  manifest.xml
sr_grasp_moving_object/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
sr_grasp_moving_object/include/sr_grasp_moving_object/: analyse_moving_object.hpp  prediction_model.hpp  sr_grasp_moving_object.hpp  utils.hpp  visual_servoing.hpp
sr_grasp_moving_object/launch/: analyse.launch
sr_grasp_moving_object/openrave/: README.txt  arm_and_hand_motor.xml
sr_grasp_moving_object/param/: prediction_model.yaml
sr_grasp_moving_object/src/: analyse_moving_object.cpp  prediction_model.cpp  sr_grasp_moving_object.cpp  visual_servoing.cpp
sr_grasp_moving_object/src/kinematics/: ikfast60.Direction3D.0_1_f2_3_4_5.cpp  ikfast60.Direction3D.0_1_f2_3_4_5.pp
sr_grasp_moving_object/test/: dummy_object.py
sr_moving_object/: mainpage.dox  manifest.xml  sr_moving_object_plugin.xml
sr_moving_object/launch/: simple_box.launch
sr_moving_object/objects/: simple_box.urdf
sr_moving_object/src/sr_moving_object/: move_objects.py
sr_moving_object/uis/: SrMoveObjects.ui
sr_open_suitcase/: mainpage.dox  manifest.xml
sr_open_suitcase/launch/: manipulation.launch
sr_open_suitcase/msg/: Suitcase.msg
sr_open_suitcase/src/: execution.py  planification.py  sr_open_suitcase.py
sr_open_suitcase/srv/: OpenSuitcase.srv
sr_open_suitcase/test/: send_dummy_suitcase.py
sr_pcl_tracking/: CMakeLists.txt  mainpage.dox  manifest.xml
sr_pcl_tracking/cfg/: SrPclTracker.cfg
sr_pcl_tracking/config/: openni_tracker.vcg
sr_pcl_tracking/launch/: openni_tracker.launch  taco_tracker.launch
sr_pcl_tracking/src/: example.cpp  sr_pcl_tracking.cpp
sr_pcl_tracking_gui/: .cproject  .project  .pydevproject  mainpage.dox  manifest.xml  plugin.xml
sr_taco_benchmarking/: mainpage.dox  manifest.xml
sr_taco_launch/: mainpage.dox  manifest.xml
sr_taco_launch/config/: taco.rviz
sr_taco_launch/launch/: gazebo_arm_and_hand.launch  hardware.launch  static_tf_real_kinect.launch  static_tf_real_taco_sensor.launch  taco_gazebo_objects.launch  taco_world.launch  visual_servoing_demo.launch
sr_taco_launch/loaders/: load_arm_and_hand_model.launch
sr_taco_launch/other/: base_with_kinect.urdf.xacro  simple_box.urdf  suitcase.urdf
sr_taco_launch/robots/: arm_and_hand_motor.urdf.xacro
sr_taco_openni/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
sr_taco_openni/launch/: sr_taco_openni.launch  sr_taco_openni_nodelets.launch
sr_taco_openni/src/: TacoOpenNI.cpp  TacoOpenNINode.cpp  attention_example_circle.cpp  cluster_segment.cpp  taco_openni_nodelet.cpp
sr_taco_openni/test/: cluster_segment.test  nodelets.test  nodelets_test.py  sr_taco_openni.test  sr_taco_openni_test.py
sr_taco_openni_bag/: mainpage.dox  manifest.xml
sr_taco_openni_bag/bags/: README
sr_visual_servoing/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
sr_visual_servoing/action/: VisualServoing.action
sr_visual_servoing/cfg/: sr_visual_servoing.cfg  sr_visual_servoing.cfgc
sr_visual_servoing/cfg/cpp/sr_visual_servoing/: sr_visual_servoingConfig.h
sr_visual_servoing/common/include/sr_visual_servoing/: prediction_model.hpp  visual_servoing.hpp
sr_visual_servoing/common/src/: sr_visual_servoing_common.cpp  visual_servoing.cpp
sr_visual_servoing/docs/: sr_visual_servoingConfig-usage.dox
sr_visual_servoing/include/sr_visual_servoing/: analyse_moving_object.hpp  prediction_model.hpp  visual_servoing.hpp  visual_servoing_moveit.hpp
sr_visual_servoing/launch/: analyse.launch
sr_visual_servoing/model/: sr_visual_servoing.ros_package  sr_visual_servoing.ros_package_diagram
sr_visual_servoing/openrave/: README.txt
sr_visual_servoing/param/: prediction_model.yaml
sr_visual_servoing/ros/src/: sr_visual_servoing_ros.cpp
sr_visual_servoing/src/: analyse_moving_object.cpp  prediction_model.cpp  visual_servoing.cpp  visual_servoing_action_server.cpp  visual_servoing_moveit.cpp
sr_visual_servoing/test/: dummy_object.py  param_object
(+13 files in other folders)
